fix z-index last-project

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -249,7 +249,7 @@ img {
   top: -10px;
   left: -12px;
   border-radius: .5rem;
-  z-index: 1000;
+  z-index: 99;
   display: flex;
   align-items: center;
   justify-content: center;
